Refatorando mensagens de validacao